another test commit, this time from nitrous dev environement

--- a/README.rdoc
+++ b/README.rdoc
@@ -4,4 +4,4 @@ This project rocks and uses MIT-LICENSE.
 
 ---
 
-Now to engage with some dangerous dabbling
+Now to engage with some dangerous dabbling.  Onward!
